# Candy_crash_curs

./: CMakeLists.txt  README.md
src/: checkCombinations.hpp  generationCandys.hpp  main.cpp  mouseClickHandler.hpp  move.hpp  structCandy.hpp
